--- a/DiscordRecolor.css
+++ b/DiscordRecolor.css
@@ -2,7 +2,6 @@
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css);
 
 :root {
-	
 	--mentioncolor: 			250, 166, 26;
 	--successcolor: 			59, 165, 92;
 	--warningcolor: 			250, 166, 26;
@@ -22,6 +21,8 @@
 	--backgroundtertiary: 			32, 34, 37;
 	--backgroundfloating: 			24, 25, 28;
 	
+	
+	--font_v:				var(--font_s, var(--font));
 	
 	--mentioncolor_v:			var(--mentioncolor_s, var(--mentioncolor));
 	--successcolor_v:			var(--successcolor_s, var(--successcolor));
@@ -216,6 +217,8 @@
 	--deprecated-text-input-border-disabled: #202225;
 	--deprecated-text-input-prefix: rgb(var(--textbrighter_v));
 	
+	--font-primary: var(--font_v) !important;
+	--font-display: var(--font_v) !important;
 }
 
 html {
